Fix broken styles

--- a/client/Main/styl/resurrection.commons.styl
+++ b/client/Main/styl/resurrection.commons.styl
@@ -843,6 +843,13 @@ input.kdinput.text
     text-align    center
     color         #EEE
 
+a.action-link.verify-email
+  color             #888
+  margin            250px
+  line-height       50px
+  text-decoration   none
+  span
+    color           #36B298
 
 .animated-modalview
 
